# sjanpy

./: .gitignore  README.md  deg.py  embedding.py  genecraft.py  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  index.rst  installation.rst
docs/api/: index.rst  ml.rst  pl.rst  pp.rst  tl.rst
docs/superpowers/plans/: 2026-04-07-scrnaseq-standardization-pipeline.md  2026-04-07-sphinx-docs.md
docs/superpowers/specs/: 2026-04-07-scrnaseq-standardization-pipeline.md  2026-04-07-sphinx-docs-design.md
docs/tutorials/: barplot.rst  deg.rst  dotplot.rst  embedding.rst  genecraft.rst  index.rst  nebulosa.rst  pres.rst  volcano.rst
sjanpy/: __init__.py  barplot.py  deg.py  dotplot.py  genecraft.py  nebulosa.py  pynebulosa_2d.py  pynebulosa_3d.py
sjanpy/ml/: __init__.py  build_dataset.py  dataset.py  eval.py  h5ad_io.py  standardize.py
sjanpy/pl/: __init__.py  dotplot.py  nebulosa.py  volcano.py
sjanpy/pp/: __init__.py  hvg.py  split.py
sjanpy/tl/: __init__.py  deg.py  gpuleiden.py  leiden.py  pres.py
tests/: conftest.py  test_h5ad_io.py  test_hvg.py  test_leiden.py  test_split.py  test_standardize.py
