[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sjanpy"
version = "0.1.0"
description = "A collection of Python utilities for single-cell analysis visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scanpy",
    "seaborn",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "adjustText",
    "plotly",
    "anndata",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sjanpy*"]
