[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sjanpy"
version = "0.0.2a"
description = "Subjacent Analysis Toolkits for Single-Cell Omics in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["single-cell", "scRNA-seq", "visualization", "bioinformatics", "scanpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "pandas",
    "scanpy",
    "seaborn",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "adjustText",
    "plotly",
    "anndata",
]

[project.optional-dependencies]
ml = [
    "torch",
    "h5py",
    "safetensors",
]
dev = [
    "pytest",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.urls]
Documentation = "https://chansigit.github.io/sjanpy/"
Repository = "https://github.com/chansigit/sjanpy"

[tool.setuptools.packages.find]
where = ["."]
include = ["sjanpy*"]
